added the form structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div class="background">
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
+    <form>
+        <h1>LOGIN HERE</h1>
+        <label for="username">USERNAME</label>
+        <input type="text" id="username" placeholder="Phone or email">
+        <label for="password">PASSWORD</label>
+        <input type="text" id="password" placeholder="password">
+    </form>
     
 </body>
 </html>
