I have modified the html page using the css stylesheet

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="circle"></div>
     </div>
     <form>
-        <h1>LOGIN HERE</h1>
+        <h1>Login Here</h1>
         <label for="username">USERNAME</label>
         <input type="text" id="username" placeholder="Phone or email">
         <label for="password">PASSWORD</label>
