Trying to adjust the circles to the corners of the form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="background">
         <div class="circle"></div>
-        <div class="circle"></div>
+        <div class="circle1"></div>
     </div>
     <form>
         <h1>Login Here</h1>
