Changed the page to look fancy!

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="background">
+    <div id="background">
         <div class="circle"></div>
         <div class="circle1"></div>
     </div>
     <form>
         <h1>Login Here</h1>
-        <label for="username">USERNAME</label>
-        <input type="text" id="username" placeholder="Phone or email">
-        <label for="password">PASSWORD</label>
-        <input type="text" id="password" placeholder="password">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Phone or Email">
+        <label for="password">Password</label>
+        <input type="text" id="password" placeholder="Password">
+        <button>Log In</button>
     </form>
     
 </body>
