--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <input type="text" id="username" placeholder="Phone or Email">
         <label for="password">Password</label>
         <input type="text" id="password" placeholder="Password">
-        <button>Log In</button>
+        <button id="button">Log In</button>
+        <div>
+            <button id="google">Google</button>
+            <button id="facebook">Facebook</button>
+        </div>
     </form>
     
 </body>
