--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 <body>
     <div id="background">
         <div class="circle"></div>
-        <div class="circle1"></div>
+        <div class="circle"></div>
     </div>
     <form>
         <h1>Login Here</h1>
+
         <label for="username">Username</label>
         <input type="text" id="username" placeholder="Phone or Email">
+
         <label for="password">Password</label>
-        <input type="text" id="password" placeholder="Password">
+        <input type="password" id="password" placeholder="Enter Password">
+
         <button id="button">Log In</button>
-        <div>
-            <button id="google">Google</button>
-            <button id="facebook">Facebook</button>
-        </div>
+        <button class="socials">Google</button>
+        <button class="socials">Facebook</button>
+       
     </form>
     
 </body>
